src/objects/Weekly_Clinical_Note__c.object
<CustomObject>
    <description>Notes</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Weekly_Team_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Addendum_Date__c</fullName>
        <label>Addendum Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Agency_Involved__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agency Involved</label>
        <referenceTo>Authorization__c</referenceTo>
        <relationshipName>Weekly_Team_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assessment_of_Progress__c</fullName>
        <label>Assessment of Progress</label>
        <picklist>
            <picklistValues>
                <fullName>Request: Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request: Denied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phase 1 (Stabilization)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phase 2 (Capacity Building)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phase 3 (Generalization)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phase 4 (Transition)</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Case_Transfer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Case Transfer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Concurrent_Review__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Concurrent Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Consultation__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Consultation includes therapist, residential change, crisis, medical follow up.</inlineHelpText>
        <label>Consultation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Copy_in_File__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Copy in File</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_GAF_Score__c</fullName>
        <label>Current GAF Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discharge__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discharge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Duration_Minutes__c</fullName>
        <label>Duration (Minutes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ecomap_Date__c</fullName>
        <label>Ecomap Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Initial_Admission_Date__c</fullName>
        <inlineHelpText>Initial Admission Date to Current Service</inlineHelpText>
        <label>Initial Admission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Initial_Assignment_Prospective__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Intervention/Activity Option</description>
        <label>Initial Assignment/Prospective</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Intervention_Activity__c</fullName>
        <label>Intervention/Activity</label>
        <picklist>
            <picklistValues>
                <fullName>Initial Assignment/Prospective</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concurrent Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consultation (therapist, residential change, crisis, etc)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discharge</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Justification_for_Services_ITR__c</fullName>
        <label>Justification for Services (ITR)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Last_CCA_Date__c</fullName>
        <label>Last CCA Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_CFT_Date__c</fullName>
        <label>Last CFT Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_GAF_Score__c</fullName>
        <label>Last GAF Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Physical_Exam__c</fullName>
        <label>Last Physical Exam</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Location_of_Service__c</fullName>
        <label>Location of Service</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medicaid__c</fullName>
        <label>Medicaid #</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Mentor_Doctor_Consult_Completed__c</fullName>
        <label>Mentor Doctor Consult Completed</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mentor_Doctor_Consult_Scheduled__c</fullName>
        <label>Mentor Doctor Consult Scheduled</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NC_TOPPS_SNAP_Last_Date_Completed__c</fullName>
        <label>NC TOPPS/SNAP Last Date Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_CFT_Scheduled__c</fullName>
        <label>Next CFT Scheduled</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PCP_Completed_Date__c</fullName>
        <label>PCP Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Primary_Care_Physician__c</fullName>
        <label>Primary Care Physician</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purpose_of_Contact_Goals__c</fullName>
        <label>Purpose of Contact/Goals</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SRI_Date__c</fullName>
        <label>SRI Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>School_Name__c</fullName>
        <label>School (Name of School/Status of IEP)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Assignment__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Service Assignment</label>
        <referenceTo>Service_Assignment__c</referenceTo>
        <relationshipName>Weekly_Team_Notes</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type_Of_Contact__c</fullName>
        <label>Type Of Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Weekly Clinical Note</label>
    <nameField>
        <label>Weekly Clinical Note Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Weekly Clinical Notes</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>